--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
     </header> -->
     <main>
-      <!--Hero-->
+      <!--HERO-->
       <section class="hero overlay">
         <div class="container">
           <div class="hero-title">
