--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
         </div>
       </section>
       <!--our clients-->
-      <!-- <section class="clients">
+      <section class="clients">
     <div class="container">
         <h2 class="client-title">Постоянные клиенты</h2>
         <ul class="client-list">
@@ -692,7 +692,7 @@
         </ul>
     </div>
 
-</section> -->
+</section>
     </main>
     <!-- <footer class="footer">
         <div class="container"> -->
