--- a/index.html
+++ b/index.html
@@ -694,10 +694,10 @@
 
 </section>
     </main>
-    <!-- <footer class="footer">
-        <div class="container"> -->
+    <footer class="footer">
+        <div class="container">
     <!--contacts -->
-    <!-- <div class="flex-footer">
+     <div class="flex-footer">
         <div class="contact-flex-footer">
     <a class="logo-footer" href="/"><span class="logo-first-part">Web</span>Studio</a>
      <address class="address"> 
@@ -747,7 +747,7 @@
             
 
            </div>
-           <form action="№" class="follow-form">
+           <form action="" class="follow-form">
                 <h3 class="follow">Подпишитесь на рассылку</h3>
                 <div class="follow-form-wrapper">
                 <input type="email" name="follow-mail"  class="follow-mail" placeholder="E-mail">
@@ -765,7 +765,7 @@
         </div>
     
     </footer>
-  <div class="backdrop is-hidden" data-modal>
+  <!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal" >
         <button type="button" class="btn-modal-close"  data-modal-close>
           <svg class="close-btn" width="30" height="30">
@@ -817,8 +817,8 @@
 
 
 
-    </div> -->
-    <!-- </div> -->
+    </div>-->
+    </div> 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
