--- a/index.html
+++ b/index.html
@@ -18,96 +18,100 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
-        <div class="container">
+    <header class="header">
+      <div class="container">
         <nav class="navigation">
-        <a class="logo" href="/"><span class="logo-first-part">Web</span>Studio</a>
-        <ul class="navigation-list">
+          <a class="logo" href="/"
+            ><span class="logo-first-part">Web</span>Studio</a
+          >
+          <ul class="navigation-list">
             <li class="navigation-item">
-                <a class="navigation-link current" href="#">Студия</a>
+              <a class="navigation-link current" href="#">Студия</a>
             </li>
             <li class="navigation-item">
-                <a class="navigation-link" href="./portfolio.html">Портфолио</a>
+              <a class="navigation-link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="navigation-item">
-                <a class="navigation-link" href="#">Контакты</a>
+              <a class="navigation-link" href="#">Контакты</a>
             </li>
-        </ul>
+          </ul>
         </nav>
-        <button class="burger-btn" type="button" data-menu-button>
+        <div class="burger-button-wrapper">
+          <button class="burger-btn" type="button" data-menu-button>
             <svg class="bugrer-btn" width="40" height="40">
-                <use href="./image/icons/opticons.svg#icon-menu-mob"></use>
+              <use href="./image/icons/opticons.svg#icon-menu-mob"></use>
             </svg>
-        </button>
-            <ul class="contacts">
-           <li class="contacts-item">
-               <a class="mail-link" href="mailto:info@devstudio.com">
-                <svg class="icon-mail" width="16" height="12">
-                    <use href="./image/icons/opticons.svg#icon-envelope"></use>
-                </svg>info@devstudio.com</a>
-            </li> 
-            <li class="contacts-item">
-                 <a class="tel-link"  href="tel:+380961111111">
-                    <svg class="icon-tel" width="10" height="16">
-                        <use href="./image/icons/opticons.svg#icon-smartphone"></use>
-                    </svg>+38 096 111 11 11</a>
-                </li>
+          </button>
+        </div>
+        <ul class="contacts">
+          <li class="contacts-item">
+            <a class="mail-link" href="mailto:info@devstudio.com">
+              <svg class="icon-mail" width="16" height="12">
+                <use href="./image/icons/opticons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="tel-link" href="tel:+380961111111">
+              <svg class="icon-tel" width="10" height="16">
+                <use href="./image/icons/opticons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
         </ul>
+      </div>
+      <!--mobile-menu-->
+      <div class="mobile-menu" data-menu>
+        <button class="mobile-close-btn" type="button" data-menu-close>
+          <svg class="bugrer-btn" width="40" height="40">
+            <use href="./image/icons/opticons.svg#icon-close-mob"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu-wrapper">
+          <ul class="mobile-menu-nav">
+            <li class="mobile-menu-item">
+              <a href="#" class="mobile-menu-link current">Студия</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="./portfolio.html" class="mobile-menu-link">Портфолио</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="#" class="mobile-menu-link">Контакты</a>
+            </li>
+          </ul>
+          <ul class="mobile-contacts">
+            <li class="mobile-contacts-item">
+              <a class="mobile-tel-link" href="tel:+380961111111">
+                +38 096 111 11 11
+              </a>
+            </li>
+            <li class="mobile-contacts-item">
+              <a class="mobile-mail-link" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+          <ul class="mobile-social-link-list">
+            <li class="mobile-social-link-item">
+              <a href="" class="mobile-social-link-link padding-left">
+                Instagram
+              </a>
+            </li>
+            <li class="mobile-social-link-item">
+              <a href="" class="mobile-social-link-link"> Twitter </a>
+            </li>
+            <li class="mobile-social-link-item">
+              <a href="" class="mobile-social-link-link"> Facebook </a>
+            </li>
+            <li class="mobile-social-link-item">
+              <a href="" class="mobile-social-link-link"> LinkedIn </a>
+            </li>
+          </ul>
         </div>
-        <div class="mobile-menu" data-menu>
-            <button class="mobile-close-btn" type="button" data-menu-close>
-                <svg class="bugrer-btn" width="40" height="40">
-                    <use href="./image/icons/opticons.svg#icon-close-mob"></use>
-                </svg>
-                </button>
-            <ul class="mobile-menu-nav">
-                <li class="mobile-menu-item">
-                    <a href="#" class="mobile-menu-link current">Студия</a>
-                </li>
-                <li class="mobile-menu-item">
-                    <a href="./portfolio.html" class="mobile-menu-link">Портфолио</a>
-                </li>
-                <li class="mobile-menu-item">
-                    <a href="#" class="mobile-menu-link">Контакты</a>
-                </li>
-            </ul>
-            <ul class="mobile-contacts">
-                <li class="mobile-contacts-item">
-                    <a class="mobile-mail-link" href="mailto:info@devstudio.com">
-                       info@devstudio.com
-                    </a>
-                </li>
-                <li class="mobile-contacts-item">
-                    <a class="mobile-tel-link" href="tel:+380961111111">
-                        +38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
-            <ul class="mobile-social-link-list">
-                <li class="mobile-social-link-item">
-                    <a href="" class="mobile-social-link-link">
-                        Instagram
-                    </a>
-                </li>
-                <li class="mobile-social-link-item">
-                    <a href="" class="mobile-social-link-link">
-                    Twitter
-                    </a>
-                </li>
-                <li class="mobile-social-link-item">
-                    <a href="" class="mobile-social-link-link">
-                    Facebook
-                    </a>
-                </li>
-                <li class="mobile-social-link-item">
-                    <a href="" class="mobile-social-link-link">
-                    LinkedIn
-                    </a>
-                </li>
-            </ul>
-
-        </div>
-    </header> -->
+      </div>
+    </header>
     <main>
       <!--HERO-->
       <section class="hero overlay">
