--- a/portfolio.html
+++ b/portfolio.html
@@ -19,38 +19,44 @@
   </head>
 
   <body>
-    <!-- <header class="header">
-        <div class="container">
-            <nav class="navigation">
-                <a class="logo" href="/"><span class="logo-first-part">Web</span>Studio</a>
-                <ul class="navigation-list">
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="./index.html">Студия</a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link current" href="#">Портфолио</a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <ul class="contacts">
-                <li class="contacts-item">
-                    <a class="mail-link" href="mailto:info@devstudio.com">
-                        <svg class="icon-mail" width="16" height="12">
-                            <use href="./image/icons/opticons.svg#icon-envelope"></use>
-                        </svg>info@devstudio.com</a>
-                </li>
-                <li class="contacts-item">
-                    <a class="tel-link" href="tel:+380961111111">
-                        <svg class="icon-tel" width="10" height="16">
-                            <use href="./image/icons/opticons.svg#icon-smartphone"></use>
-                        </svg>+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </div>
-    </header> -->
+    <header class="header">
+      <div class="container">
+        <nav class="navigation">
+          <a class="logo" href="/"
+            ><span class="logo-first-part">Web</span>Studio</a
+          >
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="./index.html">Студия</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link current" href="#">Портфолио</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts">
+          <li class="contacts-item">
+            <a class="mail-link" href="mailto:info@devstudio.com">
+              <svg class="icon-mail" width="16" height="12">
+                <use href="./image/icons/opticons.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="tel-link" href="tel:+380961111111">
+              <svg class="icon-tel" width="10" height="16">
+                <use
+                  href="./image/icons/opticons.svg#icon-smartphone"
+                ></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
     <main>
       <!--navigate buttoms-->
       <section class="portfolio">
