--- a/portfolio.html
+++ b/portfolio.html
@@ -37,24 +37,80 @@
             </li>
           </ul>
         </nav>
+        <div class="burger-button-wrapper">
+          <button class="burger-btn" type="button" data-menu-button>
+            <svg class="bugrer-btn" width="40" height="40">
+              <use href="./image/icons/opticons.svg#icon-menu-mob"></use>
+            </svg>
+          </button>
+        </div>
         <ul class="contacts">
           <li class="contacts-item">
             <a class="mail-link" href="mailto:info@devstudio.com">
               <svg class="icon-mail" width="16" height="12">
-                <use href="./image/icons/opticons.svg#icon-envelope"></use></svg
-              >info@devstudio.com</a
+                <use href="./image/icons/opticons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
             <a class="tel-link" href="tel:+380961111111">
               <svg class="icon-tel" width="10" height="16">
-                <use
-                  href="./image/icons/opticons.svg#icon-smartphone"
-                ></use></svg
-              >+38 096 111 11 11</a
+                <use href="./image/icons/opticons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
+      </div>
+      <!--mobile-menu-->
+      <div class="mobile-menu" data-menu>
+        <button class="mobile-close-btn" type="button" data-menu-close>
+          <svg class="bugrer-btn" width="40" height="40">
+            <use href="./image/icons/opticons.svg#icon-close-mob"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu-wrapper">
+          <ul class="mobile-menu-nav">
+            <li class="mobile-menu-item">
+              <a href="./index.html" class="mobile-menu-link">Студия</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="#" class="mobile-menu-link current">Портфолио</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="#" class="mobile-menu-link">Контакты</a>
+            </li>
+          </ul>
+          <ul class="mobile-contacts">
+            <li class="mobile-contacts-item">
+              <a class="mobile-tel-link" href="tel:+380961111111">
+                +38 096 111 11 11
+              </a>
+            </li>
+            <li class="mobile-contacts-item">
+              <a class="mobile-mail-link" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+          <ul class="mobile-social-link-list">
+            <li class="mobile-social-link-item">
+              <a href="" class="mobile-social-link-link padding-left">
+                Instagram
+              </a>
+            </li>
+            <li class="mobile-social-link-item">
+              <a href="" class="mobile-social-link-link"> Twitter </a>
+            </li>
+            <li class="mobile-social-link-item">
+              <a href="" class="mobile-social-link-link"> Facebook </a>
+            </li>
+            <li class="mobile-social-link-item">
+              <a href="" class="mobile-social-link-link"> LinkedIn </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -819,5 +875,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
