--- a/index.html
+++ b/index.html
@@ -187,13 +187,27 @@
           <ul class="about-us-list">
             <li class="about-us-item">
               <div class="about-us-thumb">
-                <img
-                  class="about-us-img"
-                  src="./image/hands-min.jpg"
-                  alt="набор текста на клавиатуре"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./image/studio/description/optima-description/hands-desktop.webp    1x,
+                      ./image/studio/description/optima-description/hands-desktop@2x.webp 2x
+                    "
+                    media="(min-width:1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="
+                      ./image/studio/description/optima-description/hands-desktop@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <img
+                    class="about-us-img"
+                    src="./image/studio/description/optima-description/hands-desktop.jpg"
+                    alt="набор текста на клавиатуре"
+                  />
+                </picture>
                 <div class="about-us-overlay">
                   <p class="about-us-text">Десктопные приложения</p>
                 </div>
@@ -201,13 +215,27 @@
             </li>
             <li class="about-us-item">
               <div class="about-us-thumb">
-                <img
-                  class="about-us-img"
-                  src="./image/phone-min.jpg"
-                  alt="телефон и компютер"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./image/studio/description/optima-description/phone-desktop.webp    1x,
+                      ./image/studio/description/optima-description/phone-desktop@2x.webp 2x
+                    "
+                    media="(min-width:1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="
+                      ./image/studio/description/optima-description/phone-desktop@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <img
+                    class="about-us-img"
+                    src="./image/studio/description/optima-description/phone-desktop.jpg"
+                    alt="телефон и компютер"
+                  />
+                </picture>
                 <div class="about-us-overlay">
                   <p class="about-us-text">Мобильные приложения</p>
                 </div>
@@ -215,13 +243,27 @@
             </li>
             <li class="about-us-item">
               <div class="about-us-thumb">
-                <img
-                  class="about-us-img"
-                  src="./image/tablet-min.jpg"
-                  alt="планшет в руках"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./image/studio/description/optima-description/laptop-desktop (1).webp    1x,
+                      ./image/studio/description/optima-description/laptop-desktop@2x (1).webp 2x
+                    "
+                    media="(min-width:1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="
+                      ./image/studio/description/optima-description/laptop-desktop@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <img
+                    class="about-us-img"
+                    src="./image/studio/description/optima-description/laptop-desktop.jpg"
+                    alt="планшет в руках"
+                  />
+                </picture>
                 <div class="about-us-overlay">
                   <p class="about-us-text">Дизайнерские решения</p>
                 </div>
